refactor: define separate class for each validation type
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>

# Conflicts:
#	platform-sdk/swirlds-platform-core/src/test/java/com/swirlds/platform/consensus/ConsensusTestDefinitions.java
#	platform-sdk/swirlds-platform-core/src/test/java/com/swirlds/platform/consensus/IntakeAndConsensusTests.java
#	platform-sdk/swirlds-platform-core/src/test/java/com/swirlds/platform/turtle/runner/Turtle.java
#	platform-sdk/swirlds-platform-core/src/testFixtures/java/com/swirlds/platform/test/fixtures/consensus/framework/ConsensusTestOrchestrator.java
#	platform-sdk/swirlds-platform-core/src/testFixtures/java/com/swirlds/platform/test/fixtures/consensus/framework/validation/PlatformTestFixtureValidationUtils.java
#	platform-sdk/swirlds-platform-core/src/testFixtures/java/com/swirlds/platform/test/fixtures/consensus/framework/validation/Validations.java

Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>